--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,16 +31,16 @@ a {
     --background: 240, 6%, 10%;
     --foreground: 222.2 47.4% 11.2%;
  
-    --muted: 210 40% 96.1%;
+    --muted: 240, 5%, 34%;
     --muted-foreground: 215.4 16.3% 46.9%;
  
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 47.4% 11.2%;
+    --popover: 240, 5%, 26%;
+    --popover-foreground: 0, 0%, 100%;
  
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 47.4% 11.2%;
+    --card: 240, 4%, 16%;
+    --card-foreground: 0, 0%, 100%;
  
-    --border: 214.3 31.8% 91.4%;
+    --border: 240, 5%, 26%;
     --input: 214.3 31.8% 91.4%;
  
     --primary: 222.2 47.4% 11.2%;
@@ -56,39 +56,6 @@ a {
     --destructive-foreground: 210 40% 98%;
  
     --ring: 215 20.2% 65.1%;
- 
-    --radius: 0.5rem;
-  }
- 
-  .dark {
-    --background: 224 71% 4%;
-    --foreground: 213 31% 91%;
- 
-    --muted: 223 47% 11%;
-    --muted-foreground: 215.4 16.3% 56.9%;
- 
-    --popover: 224 71% 4%;
-    --popover-foreground: 215 20.2% 65.1%;
- 
-    --card: 224 71% 4%;
-    --card-foreground: 213 31% 91%;
- 
-    --border: 216 34% 17%;
-    --input: 216 34% 17%;
- 
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 1.2%;
- 
-    --secondary: 222.2 47.4% 11.2%;
-    --secondary-foreground: 210 40% 98%;
- 
-    --accent: 216 34% 17%;
-    --accent-foreground: 210 40% 98%;
- 
-    --destructive: 0 63% 31%;
-    --destructive-foreground: 210 40% 98%;
- 
-    --ring: 216 34% 17%;
  
     --radius: 0.5rem;
   }
