--- a/event-demo/src/styles/global.css
+++ b/event-demo/src/styles/global.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 body {
-    @apply antialiased;
-    @apply bg-top bg-no-repeat bg-neutral-900 bg-hero;
-    @apply text-white;
-    @apply min-h-screen;
+  @apply antialiased;
+  @apply bg-neutral-900 bg-[linear-gradient(to_right,#80808012_1px,transparent_1px),linear-gradient(to_bottom,#80808012_1px,transparent_1px)] bg-[size:24px_24px];
+  @apply text-white;
+  @apply min-h-screen;
 }
