--- a/conferencing-demo/src/styles/globals.css
+++ b/conferencing-demo/src/styles/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  @apply overflow-hidden antialiased;
+  @apply bg-neutral-950 bg-[linear-gradient(to_right,#80808012_1px,transparent_1px),linear-gradient(to_bottom,#80808012_1px,transparent_1px)] bg-[size:62px_62px];
+  @apply text-white;
+  @apply min-h-screen;
+}
