--- a/profiles-demo/src/styles/globals.css
+++ b/profiles-demo/src/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  @apply box-border;
+}
+
+body,
+html {
+  @apply bg-zinc-950 text-zinc-200;
+}
